# llm-trainer

./: .bandit.yml  .pre-commit-config.yaml  pyproject.toml
configs/: iterative_sft.yaml  lit_sft.yaml  sft.yaml
configs/deepspeed/: deepspeed_stage_3.json
llm_trainer/: __main__.py
llm_trainer/batch_producer/: __init__.py  base.py  deliberative_reason.py  factory.py
llm_trainer/batch_producer/pipeline/filter/: __init__.py  all_pass.py  base.py  factory.py
llm_trainer/batch_producer/pipeline/instruction/: __init__.py  base.py  factory.py  llm.py
llm_trainer/cache_manager/: redis.py
llm_trainer/custom_dataset/: example_dataset.py  iterative_sft_dataset.py  sft_dataset.py
llm_trainer/data_formatter/: __init__.py  base.py  derived.py  registry.py
llm_trainer/example_formatter/: __init__.py  base.py  derived.py  registry.py
llm_trainer/inference/: base.py  cached.py  factory.py
llm_trainer/inference/api_llm/: __main__.py  anthropic.py  base.py  gemini.py  openai_api.py
llm_trainer/prompts/: __init__.py  base.py  instruction_classifier.py  instruction_generate.py  reason_generate.py  registry.py
llm_trainer/prompts/templates/: policy.py
llm_trainer/trainer/: base.py  iterative_sft.py  sft.py
llm_trainer/trainer/custom_trl/: iterative_sft_trainer.py
llm_trainer/trainer/lit/: trainer.py
llm_trainer/trainer/trl/: base.py  sft.py
llm_trainer/utils/: config.py  extract_tools.py  logger.py  registry.py  tools.py  type_utils.py
scripts/iterative_sft/: iterative_sft.py  iterative_sft.sh
scripts/sft/: sft.py  sft.sh  sft.yaml
(+18 files in other folders)
